service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trade-service
spec:
  selector:
    app: trade-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
  type: NodePort
