ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trade-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  -  host: "arch.homework"
     http:
      paths:
        - path: /otusapp/orensimple
          backend:
            serviceName: trade-service
            servicePort: 9000
        - path: /
          backend:
            serviceName: trade-service
            servicePort: 9000
